/watched & Minor fixes
